Remove deprecated parts of dropwizard-util (#4916)
* Remove deprecated parts of dropwizard-util

These are all deprecated in 2.1.x and unused by Dropwizard itself.

* Replace `ByteStream#toByteArray()` with `InputStream#readAllBytes()`

This utility class is no longer required.